@@ -12,6 +12,8 @@ version 0.67
 	* Shows "hiptop" icon for AIM buddies using hiptop
 	  devices (Robey Pointer)
 	* Privacy core/UI split.
+	* Conversation placement by group now applies to chats in the buddy
+	  list as well.
 	* Events in a conversation (user logged in, logged out, window closed,
 	  etc.) now grey the tab.
 	* Various bug fixes (larne from irc, Tim Ringenbach, Bjoern 
